<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    
    <PreferenceCategory 
        android:title="@string/bus_prediction_settings"
        android:key="bus_predictions_settings">
        
        <SwitchPreference
        	android:key="auto_refresh"
        	android:title="@string/auto_refresh_title"
        	android:summaryOn="@string/auto_refresh_summary_on"
        	android:summaryOff="@string/auto_refresh_summary_off"
        	android:defaultValue="true"
        	android:switchTextOn="@string/on"
        	android:switchTextOff="@string/off"/>
    
    	<SwitchPreference
        	android:key="alarm"
        	android:title="@string/alarm_title"
        	android:summaryOn="@string/alarm_summary_on"
        	android:summaryOff="@string/alarm_summary_off"
        	android:defaultValue="false"
        	android:switchTextOn="@string/on"
        	android:switchTextOff="@string/off"/>
    	
    	<ListPreference
    	    android:dependency="alarm"
            android:title="@string/alarm_mode"
            android:dialogTitle="@string/alarm_mode_dialogTitle"
            android:summary="@string/alarm_mode_summary"
            android:key="alarm_mode"
            android:defaultValue="Auto"
            android:entries="@array/alarmListArray"
            android:entryValues="@array/alarmListArray"/>
        
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:title="@string/nearby_settings">
    	
        <ListPreference
            android:title="@string/nearby_distance_unit"
            android:key="near_me_unit"
            android:defaultValue="ft"
            android:entries="@array/unitListArray"
            android:entryValues="@array/unitListValues" />
        
    </PreferenceCategory>
    
    
    
</PreferenceScreen>